overflow-x problem fix

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
     padding: 0;
     border-style: border-box;
     text-decoration: none;
-}
+    overflow-x: none;
+} 
 
 nav {
     overflow: hidden;
